--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,11 @@
-<html>
-    <head>
-        <title>Django</title>
-    </head>
-    <body>
-        <nav>home contacs logout</nav>
-        <h1>hi there</h1>
-        <p><em>This is my <b>Django</b> website thank you for visiting!</em>/p>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+   {% for post in posts %}
         <article>
-            <h2><a href="">My first Post</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero facilis voluptatibus eveniet fugit velit praesentium sequi possimus ullam aspernatur sed, sapiente maxime eum odio esse quas omnis, ex, adipisci ipsum.</p>
-            <time>published: 29.02.2023</time>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr}}</p>
+            <time>{{post.published_date}}</time>
         </article>
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
